<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ResultScreen"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnback"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvresult"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_margin="25dp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="Name"
        android:textColor="@color/DarkGreen"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tvresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_margin="30dp"
        android:text="Result"
        android:textColor="@color/white"
        android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/result_bottom_half">
        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnshare"
            android:backgroundTint="@color/DarkGreen"
            android:layout_marginTop="120dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

</LinearLayout>